--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,14 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <meta charset="utf-8">
     <title>BLW</title>
   </head>
   <body>
     <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">BLW</a>
+      <a href="/" class="brand-logo">BLW</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="#">Government</a></li>
         <li><a href="#">Social</a></li>
